kubernetes/applications/media/prowlarr/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-cloudflare
  namespace: media
  labels:
    app: prowlarr
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: prowlarr.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
